--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <!-- TOP -->
     <div
-      class="container-fluid background d-flex justify-content-between align-items-center"
+      class="container-md background d-flex justify-content-between align-items-center"
     >
       <!-- LOGO -->
       <div class="px-1 py-4">
@@ -301,7 +301,7 @@
     <!-- end of TOP -->
 
     <!-- BOTTOM -->
-    <footer class="container-fluid background-2">
+    <footer class="container-md background-2">
       <div class="row">
         <div class="col-6 col-lg-2 text-start text-lg-start pt-3 pt-lg-3">
           <p class="font-size-smaller">Terms and conditions</p>
