--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- main -->
 
-    <div class="background container-md my-3 px-2 py-3 rounded-4">
+    <div class="background container-md my-3 px-2 py-3 p-lg-5 rounded-4">
       <!-- Head -->
       <h4 class="fw-bold py-1">REGISTER YOUR BOOK</h4>
 
